apollo-federation/src/connectors/expand/tests/snapshots/connectors@sibling_fields.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/sibling_fields.graphql
---
{
    "connectors_Query_f_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: None,
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.f),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: Some(
            HttpJsonTransport {
                source_template: None,
                connect_template: StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "https://my.api/t",
                                location: 0..16,
                            },
                        ),
                    ],
                },
                method: Get,
                headers: [],
                body: None,
                source_path: None,
                source_query_params: None,
                connect_path: None,
                connect_query_params: None,
            },
        ),
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "k",
                                                    ),
                                                    range: Some(
                                                        0..1,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Selection(
                                                        SubSelection {
                                                            selections: [
                                                                NamedSelection {
                                                                    prefix: None,
                                                                    path: WithRange {
                                                                        node: Path(
                                                                            PathSelection {
                                                                                path: WithRange {
                                                                                    node: Key(
                                                                                        WithRange {
                                                                                            node: Field(
                                                                                                "id",
                                                                                            ),
                                                                                            range: Some(
                                                                                                4..6,
                                                                                            ),
                                                                                        },
                                                                                        WithRange {
                                                                                            node: Empty,
                                                                                            range: Some(
                                                                                                6..6,
                                                                                            ),
                                                                                        },
                                                                                    ),
                                                                                    range: Some(
                                                                                        4..6,
                                                                                    ),
                                                                                },
                                                                            },
                                                                        ),
                                                                        range: Some(
                                                                            4..6,
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                            range: Some(
                                                                2..8,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        2..8,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..8,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    0..8,
                                ),
                            },
                        },
                    ],
                    range: Some(
                        0..8,
                    ),
                },
            ),
            spec: V0_1,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        schema_subtypes_map: {},
        request_headers: {},
        response_headers: {},
        request_variable_keys: {},
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        requires: [],
        output_type: Some(
            Named(
                "T",
            ),
        ),
        label: Label(
            "connectors. http: GET https://my.api/t",
        ),
    },
    "connectors_T_b_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: None,
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(T.b),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: Some(
            HttpJsonTransport {
                source_template: None,
                connect_template: StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "https://my.api/t/",
                                location: 0..17,
                            },
                        ),
                        Expression(
                            Expression {
                                expression: JSONSelection {
                                    inner: Value(
                                        WithRange {
                                            node: Path(
                                                PathSelection {
                                                    path: WithRange {
                                                        node: Var(
                                                            WithRange {
                                                                node: $this,
                                                                range: Some(
                                                                    0..5,
                                                                ),
                                                            },
                                                            WithRange {
                                                                node: Key(
                                                                    WithRange {
                                                                        node: Field(
                                                                            "k",
                                                                        ),
                                                                        range: Some(
                                                                            6..7,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Key(
                                                                            WithRange {
                                                                                node: Field(
                                                                                    "id",
                                                                                ),
                                                                                range: Some(
                                                                                    8..10,
                                                                                ),
                                                                            },
                                                                            WithRange {
                                                                                node: Empty,
                                                                                range: Some(
                                                                                    10..10,
                                                                                ),
                                                                            },
                                                                        ),
                                                                        range: Some(
                                                                            7..10,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    5..10,
                                                                ),
                                                            },
                                                        ),
                                                        range: Some(
                                                            0..10,
                                                        ),
                                                    },
                                                },
                                            ),
                                            range: Some(
                                                0..10,
                                            ),
                                        },
                                    ),
                                    spec: V0_1,
                                },
                                location: 18..28,
                            },
                        ),
                    ],
                },
                method: Get,
                headers: [],
                body: None,
                source_path: None,
                source_query_params: None,
                connect_path: None,
                connect_query_params: None,
            },
        ),
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "b",
                                                    ),
                                                    range: Some(
                                                        0..1,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        1..1,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..1,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    0..1,
                                ),
                            },
                        },
                    ],
                    range: Some(
                        0..1,
                    ),
                },
            ),
            spec: V0_1,
        },
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_1,
        schema_subtypes_map: {},
        request_headers: {},
        response_headers: {},
        request_variable_keys: {
            $this: {
                "k",
            },
        },
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        requires: [],
        output_type: Some(
            Named(
                "String",
            ),
        ),
        label: Label(
            "connectors. http: GET https://my.api/t/{$this.k.id}",
        ),
    },
}
