apollo-federation/src/connectors/expand/tests/snapshots/connectors@simple.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/simple.graphql
---
{
    "connectors_Query_users_0": Connector {
        id: ConnectId {
            label: "connectors.example http: GET /",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.users),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                http://example/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/",
                            location: 0..1,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "a",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..4,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
        },
    },
    "connectors_Query_user_0": Connector {
        id: ConnectId {
            label: "connectors.example http: GET /{$args.id}",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.user),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                http://example/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/",
                            location: 0..1,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $args,
                                                range: Some(
                                                    0..5,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "id",
                                                        ),
                                                        range: Some(
                                                            6..8,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            8..8,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    5..8,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..8,
                                        ),
                                    },
                                },
                            ),
                            location: 2..10,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "a",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "b",
                            ),
                            range: Some(
                                5..6,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..6,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Explicit,
        ),
        spec: V0_1,
        request_variables: {
            $args,
        },
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
        },
    },
    "connectors_User_d_1": Connector {
        id: ConnectId {
            label: "connectors.example http: GET /{$this.c}/d",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(User.d),
                    directive_name: "connect",
                    directive_index: 1,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                http://example/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/",
                            location: 0..1,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $this,
                                                range: Some(
                                                    0..5,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "c",
                                                        ),
                                                        range: Some(
                                                            6..7,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            7..7,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    5..7,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..7,
                                        ),
                                    },
                                },
                            ),
                            location: 2..9,
                        },
                    ),
                    Constant(
                        Constant {
                            value: "/d",
                            location: 10..12,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: Some(
                Named(
                    SubSelection {
                        selections: [
                            Path {
                                alias: Some(
                                    Alias {
                                        name: WithRange {
                                            node: Field(
                                                "with_b",
                                            ),
                                            range: Some(
                                                0..6,
                                            ),
                                        },
                                        range: Some(
                                            0..7,
                                        ),
                                    },
                                ),
                                inline: false,
                                path: PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $this,
                                                range: Some(
                                                    8..13,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "b",
                                                        ),
                                                        range: Some(
                                                            14..15,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            15..15,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    13..15,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            8..15,
                                        ),
                                    },
                                },
                            },
                        ],
                        range: Some(
                            0..15,
                        ),
                    },
                ),
            ),
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Path(
            PathSelection {
                path: WithRange {
                    node: Var(
                        WithRange {
                            node: $,
                            range: Some(
                                0..1,
                            ),
                        },
                        WithRange {
                            node: Empty,
                            range: Some(
                                1..1,
                            ),
                        },
                    ),
                    range: Some(
                        0..1,
                    ),
                },
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_1,
        request_variables: {
            $this,
        },
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
        },
    },
}
